# OMMA-tool

./: .env.devel  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: pylint.yml
alembic/: README.md  env.py
backend/: config.py  dependencies.py  main.py
backend/api/api_v1/: routers.py
backend/api/api_v1/endpoints/: analysis_endpoints.py  generic_endpoints.py
backend/db/: base_class.py  config.py
backend/db/models/: batch_model.py  dim_model.py  measurement_model.py
backend/parsers/: keyence_parser.py
backend/utils/: logging_utils.py
data/_examples/auto_csv_Keyence_IM-8020_VIE/examples/: keyence1.csv  keyence2.csv
data/_examples/man_XLS_MIXED_ZJ/examples/: mixed_1.xlsm
docs/: data_sources.xlsx
scripts/: set-alembic-url.py  tests-start.sh  uvicorn-start.sh  venv.bat  venv.sh
scripts/init-scripts/: init-alembic.sh
static/: index.html  index.xhtml
tests/: test_api.py
tests/backend/: test_api.py
