[tool.poetry]
name = "OMMA-tool"
version = "0.1.0"
description = "Online Mechanical Measurement Analysis"
authors = ["Jan Filips <janfilipsgt@gmail.com>", "Rotter, Ronald <ronald.rotter@sound-solutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
