[tool.poetry]
name = "OMMA-tool"
version = "0.1.0"
description = "Online Mechanical Measurement Analysis"
authors = ["Jan Filips <janfilipsgt@gmail.com>", "Rotter, Ronald <ronald.rotter@sound-solutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hypercorn = "^0.16.0"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
uvicorn = "^0.27.1"
itsdangerous = "^2.1.2"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
